Projet terminé: rendu final

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -31,6 +31,7 @@ button, input, textarea, select {
 img, picture, video, canvas, svg {
   display: block;
   max-width: 100%;
+  cursor: pointer;
 }
 
 table {
